terraform/billing-instance.tf
resource "aws_instance" "billing" {
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = "t3.micro"
  key_name               = aws_key_pair.my_key.key_name
  vpc_security_group_ids = [aws_security_group.internal_sg.id]

  root_block_device {
    volume_size           = 8
    volume_type           = "gp3"
    delete_on_termination = true
  }

  user_data = templatefile("${path.module}/scripts/deploy-template.sh", {
    instance_name   = "hamster-billing"
    gh_deploy_token = var.github_token
    deploy_id       = var.deploy_id
    gh_repo         = var.github_repo
    report_script   = file("${path.module}/scripts/report-status.sh")
    deploy_script   = templatefile("${path.module}/scripts/billing.sh", {
      DB_PRIVATE_IP    = aws_instance.db.private_ip
      KAFKA_PRIVATE_IP = aws_instance.kafka.private_ip
      AUTH_PRIVATE_IP  = aws_instance.auth.private_ip
      DB_ROOT_PASSWORD = var.db_root_password
    })
  })

  tags = {
    Name = "hamster-billing"
  }
}
